Update documentation and examples